*woeusb-1.3.4 (10 Mar 2018)
*woeusb-9999 (10 Mar 2018)

  10 Mar 2018;  <kalin@gentoo.org> +metadata.xml, +woeusb-1.3.4.ebuild,
  +woeusb-9999.ebuild:
  app-misc/woeusb: new package  ToDo: * check if all dependencies are included *
  anything better with the version?