@@ -1,4 +1,4 @@
-EBUILD woeusb-1.3.4.ebuild 593 SHA256 3f584911d5a2b1c30843a475907b942d221aaf3ca1d3809dea7a440d3d33bfce SHA512 0d1e9ad31d9cec6a8117e63f5a9f5a6462a74cfce566c21862ec8364e316ac0b75109a9d65f8ca1223cc2bca3b580a9828385cfa42b7e4cf7084759ac8b85f6a WHIRLPOOL 8974382531526a331314c7e37aaadc64b2f76c2774b7d2130a13bf8022ddacbf51a95498e3fb0c0da75927f74b621db650687435f583e6d0553eb292b8e7ebad
-EBUILD woeusb-9999.ebuild 574 SHA256 6a4789c61e73d54fff541bc53a2ec076a0d9c5d5f7cadafdafd61169c321ddfb SHA512 78a66184474f3dbed28ae7f76e4f2ad612795d9ad778c914f174fdcd4e4efced2169014f74a59db92628242b9b19def36f0541e0c0aeebe9789664cb46eb9eaa WHIRLPOOL 0847624b5879aa7f6ea04fdfcbc9257ddeb07dfb77c597ef5d6944135531b66c03539f8502c37c48c90ae2c5a2910116a8662ca3fa79c6fff3dbef5354059079
-MISC ChangeLog 268 SHA256 dec776ca205ebabbab8b9d66527c66963d4baca0d2f0171da13cb2f2cfd55062 SHA512 b365cbaec1628ce2743c63396716da57104190f36e1e7f7a2c380968c78f623bc0f2149b0c74788a89f284e128c9c6f40c3ea761fbcf6e243c86488a87250a65 WHIRLPOOL 41f575b6ab7058048b8102c88f0965fab288ec4a163b958e413c70514b93405279639d4c8b23504fbf003211eb55af5edc146859e585b56560915945a9d5639c
+EBUILD woeusb-1.3.4.ebuild 782 SHA256 afdcdd25ad45df2d25afa8cd5582c861cf139df65f8171f9dbc68278f2a05595 SHA512 6f46f7cdea1af71cdfec54e59a6b3bff9e02312361d50d29558edf70031790c72b72ee2ee20f0da70d17fdacaf655f572ec8547907cc88b13757f583d51d5eb2 WHIRLPOOL b99c2dbf274130dfce6bee3cb197ed84d12f708f5786659fc82aaaa415763fcea99fa20beea71fbe6b8567ccd02fe5049756cc8a2f77cda589a22a012f08e966
+EBUILD woeusb-9999.ebuild 763 SHA256 88eaca7f238d4150add165f63a311d49ef9cec53302bbb1f93bca9e4a36b059b SHA512 baf645ac8efaee2557d13dc251d0baa5ec7ca4432144834e1ea3be9810bc4632732921369d7e5c076f10e2b1b71ba4a833357541c2a4200a7a7b1a6a743c60d9 WHIRLPOOL 9ab111041e0a59b58a6fe106936b036f1c910edea45c47488b319edc3b05f5a4f246172cec9a192f7f4f43ecccc82eae6e52a690b6153d828ab622ef71da8c86
+MISC ChangeLog 453 SHA256 be33fa9cdeaae5c19b3c167cc979814e40bc12fa34270b417702eb8bacbcbb50 SHA512 1f8b5ef491a7b10efc6344ba05e801c09731b5345930618272faa1f662afdc0cdf2ea0506233fc6a11382142f24acad952b3da1ea6080ca6b4b56b762069fb90 WHIRLPOOL cedc9f7ec3b49ee737c28a0713b2de3b69ecfa873d7920244afcf8db5bc9bdf717e90e3a0c3d5dd5ae75004a890b238797d9e23c1ce9a83d2b44c7d8f2c7e99e
 MISC metadata.xml 232 SHA256 6c0da37bdae99d2dbe3939c7dddc006f8a35fd49b6cf917dfc26ff3204c012d6 SHA512 fbd977e8eadbe292d3295704e7b9b2fee29195065b1432662fbc7fc94a2d6eca50bf14ef404c8637180d8469e9f51500997e1b0d7698f1f6286975c5df90f455 WHIRLPOOL 31b923fac090ca3a43b8ae17a5c6634d01f0a9df3e3e66eec1f11f994a057c8238fd9ca870e9a28f0742c64a35098cd23cac238cbb0c4fa322e8d62eb05723f0
